[project]
name = "gpu-audio-upsampler"
version = "0.1.0"
description = "GPU-accelerated high-precision audio upsampling plugin"
readme = "CLAUDE.md"
requires-python = ">=3.11"
dependencies = [
    "scipy>=1.11.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "soundfile>=0.12.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]

[dependency-groups]
dev = [
    "pre-commit>=3.8.0",
    "ruff>=0.6.9",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "detect-secrets>=1.5.0",
    "mypy>=1.13.0",
]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["scripts"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_strict_optional = true
warn_return_any = false
warn_unused_ignores = true
show_error_codes = true
# Start with relaxed settings, gradually tighten
check_untyped_defs = false
disallow_untyped_defs = false
